# rocr

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/example0/: CMakeLists.txt  main.cc
lib/: CMakeLists.txt
lib/include/: charcandidate.h  chardetector.h  lineardb.h  linedetector.h  mserdetector.h  parameter.h  rocr.h  spatialdb.h  utils.h
lib/src/: charcandidate.cc  lineardb.cc  linedetector.cc  mserdetector.cc  rocr.cc  utils.cc
python/: CMakeLists.txt  module.cc
